# pyomop

./: .buildinfo  .coveragerc  .gitignore  .readthedocs.yml  404.html  AGENTS.md  AUTHORS.md  CHANGELOG.md  CHANGELOG.rst  CHANGES_SUMMARY.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  Makefile  README.md  authors.html  changelog.html  codecov.yaml  config-local.js  copyskills.sh  dev-requirements.in  dev-requirements.txt  docker-compose.yml  docker-start.sh  genindex.html  index.html  license.html  mkdocs.yml  objects.inv  py-modindex.html  pyomop.py  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  (+6 more)
.agents/skills/omop-migration-mapper/: README.md  SKILL.md
.agents/skills/omop-migration-mapper/assets/: mapping.template.json
.agents/skills/omop-migration-mapper/examples/: ehr-to-omop-sample.md
.agents/skills/omop-migration-mapper/references/: decisions.md  schema-guides.md
.agents/skills/omop-migration-mapper/scripts/: validate_mapping.py
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: authors.doctree  changelog.doctree  index.doctree  license.doctree  readme.doctree
.doctrees/api/: modules.doctree  pyomop.cdm54.doctree  pyomop.cdm6.doctree  pyomop.doctree
.github/: config.yml  copilot-instructions.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: bump.yml  docs.yml  github-dependents-info.yml  publish.yml  pytest.yml  tox.yml  upgrade.yml
_modules/: index.html
_modules/pyomop/: cdm6_tables.html  engine_factory.html  llm_engine.html  llm_query.html  main.html  vector.html  vocabulary.html
_modules/pyomop/cdm54/: cdm54_tables.html
_modules/pyomop/cdm6/: cdm6_tables.html
_sources/: changelog.md.txt  index.md.txt
_sources/api/: pyomop.cdm54.rst.txt  pyomop.cdm6.rst.txt  pyomop.rst.txt
api/: modules.html  pyomop.cdm54.html  pyomop.cdm6.html  pyomop.html
changelog/: index.html
contributing/: index.html
docs/: Makefile  conf.py  eunomia.md  generic_loader.md  github-dependents-info.md  index.md  index.rst  modules.md  pyomop_migrate.md
examples/: README_LLM.md  eunomia_example.py  eunomia_test_minimal.py  llm_example.ipynb  llm_example.py  llm_example_improved.py  load_csv_mapping.py  load_vocab.py  mapping.example.json  pyhealth.ipynb  webapi_source.sql
github-dependents-info/: index.html
modules/: index.html
notes/: docker.md  eunomia.md  generic_loader.md  libraries.md  llm-inspect.md  notes.md  pip-tools.md  prompt.md  pyhealth.py  pyomop_migrate.md
pyomop_migrate/: index.html
search/: search_index.json
src/: __init__.py
src/pyomop/: CreateCohortTable.sql  __init__.py  __main__.py  cdm6-tables.py  cdm6_tables.py  cdm_factory.py  create_table.py  engine_factory.py  eunomia.py  generic_loader.py  llm_engine.py  llm_inspector.py  llm_query.py  loader.py  main.py  mapping.default.json  mapping.generic.example.json  pyhealth.py  pyomop.py  skeleton.py  sqldict.py  vector.py  vocabulary.py
src/pyomop/cdm54/: __init__.py  cdm54_tables.py
src/pyomop/cdm6/: __init__.py  cdm6_tables.py
src/pyomop/mcp/: __init__.py  __main__.py  server.py
src/pyomop/migrate/: __init__.py  pyomop_migrate.py
tests/: CONCEPT.csv  CONCEPT_ANCESTOR.csv  CONCEPT_CLASS.csv  CONCEPT_RELATIONSHIP.csv  CONCEPT_SYNONYM.csv  DOMAIN.csv  DRUG_STRENGTH.csv  RELATIONSHIP.csv  VOCABULARY.csv  conftest.py  fhir_export.csv  patient3.csv  test_a_pyomop.py  test_ab_vector.py  test_b_create_vocab.py  test_bb_create_vocab.py  test_c_vocab.py  test_cli.py  test_cli_integration.py  test_create_vocab.py  test_d_vector.py  test_e_llm_query.py  test_eunomia.py  test_eunomia_structure.py  test_f_llm_inspector.py  test_generic_loader.py  test_loader.py  test_mcp_server.py  test_pyhealth.py  test_pyomop.py  test_pyomop_migrate.py  test_skeleton.py  test_vocab.py
